# a-puzzle-a-day

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
a_puzzle_a_day/: __init__.py  constants.py  projects.py
a_puzzle_a_day/cad/: calendar_board.py  labels_svg.py  puzzle_piece.py
a_puzzle_a_day/solver/: pieces.py  search.py
cadbuildr_projects/a_puzzle_a_day/: constants.py
cadbuildr_projects/a_puzzle_a_day/cad/: __init__.py  assembly.py  calendar_board.py  geometry.py
cadbuildr_projects/a_puzzle_a_day/solver/: __init__.py  grid.py
examples/: board_only.py  today.py
github-io/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
github-io/public/local-puzzle/: cadbuildr_projects_a_puzzle_a_day-0.1.0-py3-none-any.whl  cadbuildr_projects_a_puzzle_a_day-0.1.1-py3-none-any.whl
github-io/src/: kernelApiEnv.ts  main.tsx  puzzleLocal.ts  styles.css  vite-env.d.ts
scripts/: emit_schemas.py
